logs/django-epiced.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Markdown-2.6.11.dist-info'...
Listing './lib/python3.5/site-packages/django_epiced-0.4.1.egg-info'...
Listing './lib/python3.5/site-packages/epiced'...
Compiling './lib/python3.5/site-packages/epiced/fields.py'...
***   File "./lib/python3.5/site-packages/epiced/fields.py", line 34
    print name, path, args, kwargs
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/epiced/static'...
Listing './lib/python3.5/site-packages/epiced/static/epiced'...
Listing './lib/python3.5/site-packages/epiced/static/epiced/images'...
Listing './lib/python3.5/site-packages/epiced/static/epiced/js'...
Listing './lib/python3.5/site-packages/epiced/static/epiced/themes'...
Listing './lib/python3.5/site-packages/epiced/static/epiced/themes/base'...
Listing './lib/python3.5/site-packages/epiced/static/epiced/themes/editor'...
Listing './lib/python3.5/site-packages/epiced/static/epiced/themes/preview'...
Listing './lib/python3.5/site-packages/epiced/templates'...
Listing './lib/python3.5/site-packages/epiced/templates/epiced'...
Listing './lib/python3.5/site-packages/markdown'...
Listing './lib/python3.5/site-packages/markdown/extensions'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
